logs/md/pseudo_hyperboloid_skip_md_grpc_10_8.err
  File "train.py", line 89
    tot_params = sum([np.prod(p.size()) for p in model.parameters()])
             ^
SyntaxError: invalid syntax
